// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banana 1`] = `
SuffixTree {
  "index": {
    "a": {
      "$": {
        "BANANA": 1,
      },
      "n": {
        "a": {
          "$": {
            "BANANA": 1,
          },
          "n": {
            "a": {
              "$": {
                "BANANA": 1,
              },
            },
          },
        },
      },
    },
    "b": {
      "a": {
        "n": {
          "a": {
            "n": {
              "a": {
                "$": {
                  "BANANA": 1,
                },
              },
            },
          },
        },
      },
    },
    "n": {
      "a": {
        "$": {
          "BANANA": 1,
        },
        "n": {
          "a": {
            "$": {
              "BANANA": 1,
            },
          },
        },
      },
    },
  },
}
`;

exports[`Banana ban search 'nana ban' 1`] = `
[
  {
    "key": "BANANA",
    "score": 1,
  },
]
`;

exports[`Banana search nana 1`] = `
{
  "BANANA": 1,
}
`;

exports[`Multiple hits sharing phrases 1`] = `
[
  {
    "key": "wood",
    "score": 1,
  },
]
`;

exports[`erosjonsmotstand 1`] = `
{
  "ER": 1,
}
`;

exports[`i myra eller skogen 1`] = `
[
  {
    "key": "myr",
    "score": 1,
  },
  {
    "key": "skog",
    "score": 0.81,
  },
]
`;
